--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
+    "jquery": "^2.2.4",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
+    "growl": "^1.10.5",
     "json-server": "^0.14.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
